# recover-mtls-trust-graphs-postgresql

./: .gitattributes  .gitignore  EXPERTS_PLATFORM.md  PROJECT_PLAN.md  README.md  RUBRIC.md  SUBMISSION_CHECKLIST.md  instruction.md  task.toml
app/api/: app.py  config.py  requirements.txt
app/certificates/: README.md
app/database/: schema.sql
app/graph/fragments/: head.graphml  tail.graphml
app/pipeline/: CMakeLists.txt  db_ingest.cpp  db_ingest.hpp  json_util.cpp  json_util.hpp  main.cpp  repair.cpp  report.cpp  report.hpp  verifier_client.cpp  verifier_client.hpp  xsd_validate.cpp  xsd_validate.hpp
app/schema/: report.schema.json
app/scripts/: gen_fixtures.py  init_db.sh  start_services.sh
environment/: .dockerignore  Dockerfile  test-requirements.txt
environment/app/api/: app.py  config.py  requirements.txt
environment/app/certificates/: README.md
environment/app/database/: schema.sql
environment/app/pipeline/: CMakeLists.txt  db_ingest.cpp  db_ingest.hpp  json_util.cpp  json_util.hpp  main.cpp  repair.cpp  repair.hpp  report.cpp  report.hpp  verifier_client.cpp  verifier_client.hpp  xsd_validate.cpp  xsd_validate.hpp
environment/app/schema/: report.schema.json
environment/app/scripts/: build.sh  gen_fixtures.py  run_pipeline.sh
scripts/: create-submission-zip.py  load-stb-env.sh.example  run-harness.sh  validate-submission-zip.py
solution/: solve.sh
solution/pipeline/: CMakeLists.txt  db_ingest.cpp  json_util.cpp  main.cpp  repair.cpp  repair.hpp  report.cpp  verifier_client.cpp  xsd_validate.cpp
tests/: test.sh  test_outputs.py
(+2 files in other folders)
